# BC-Engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
BC-Core/: CMakeLists.txt
BC-Core/Source/: BC.h  BC_PCH.h
BC-Core/Source/Asset/: Asset.h  AssetManager.cpp  AssetManager.h  AssetManagerAPI.cpp  AssetManagerAPI.h
BC-Core/Source/Asset/Assets/: AnimationClip.h  Material.h  RenderTarget.cpp  RenderTarget.h  Shader.h  Skeleton.cpp  Skeleton.h  StaticMesh.h  Texture.cpp  Texture.h
BC-Core/Source/Asset/Assets/AnimationStateMachine/: AnimationStateMachine.h
BC-Core/Source/Core/: Application.cpp  Application.h  EntryPoint.h  GUID.cpp  GUID.h  Input.cpp  Input.h  Keycode.h  LayerStack.cpp  LayerStack.h  Time.cpp  Time.h  Window.cpp  Window.h
BC-Core/Source/Debug/: Assert.h  ErrorCodes.h  Logging.cpp  Logging.h  Profiler.h
BC-Core/Source/Graphics/: SceneCamera.cpp  SceneCamera.h
BC-Core/Source/Graphics/Renderer/: CameraContext.h  GeometryEnvironment.cpp  GeometryEnvironment.h  LightEnvironment.h  SceneRenderer.cpp  SceneRenderer.h  ShadowEnvironment.h
BC-Core/Source/Graphics/Vulkan/: RenderCommand.h  Swapchain.cpp  Swapchain.h  VulkanCore.cpp  VulkanCore.h  VulkanUtil.cpp  VulkanUtil.h
BC-Core/Source/Jobs/: JobSystem.cpp  JobSystem.h  Jobs.cpp  Jobs.h
BC-Core/Source/Physics/: Physics.cpp  Physics.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsWrapper.cpp  PhysicsWrapper.h
BC-Core/Source/Project/: Project.cpp  Project.h
BC-Core/Source/Project/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
BC-Core/Source/Project/Scene/Bounds/: Bounds.cpp  Bounds.h  Frustum.cpp  Frustum.h  Octree.h
BC-Core/Source/Project/Scene/Components/: AnimationComponents.cpp  AnimationComponents.h  AudioComponents.cpp  AudioComponents.h  CameraComponents.cpp  CameraComponents.h  Component Base.cpp  Component Base.h  CoreComponents.cpp  CoreComponents.h  LightComponents.cpp  LightComponents.h  MeshComponents.cpp  MeshComponents.h  PhysicsComponents.cpp  PhysicsComponents.h
BC-Core/Source/Scripting/: ScriptDefines.cpp  ScriptDefines.h  ScriptManager.cpp  ScriptManager.h  ScriptRegister.cpp  ScriptRegister.h
BC-Core/Source/Util/: FileUtil.h  Hash.h  Macro.h  Platform.h  ThreadUtil.h
BC-Editor/: CMakeLists.txt  imgui.ini
BC-Editor/Resources/Compiler/linux/: clang++
BC-Editor/Source/: BC-Editor.cpp  BC-Editor.h  EditorEntryPoint.cpp
BC-Editor/Source/Camera/: EditorCamera.cpp  EditorCamera.h
BC-Editor/Source/Panels/: AnimatorPanel.h  AssetRegistryPanel.h  ConsolePanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  HumanoidConfigPanel.h  InspectorPanel.cpp  InspectorPanel.h  PanelBase.cpp  PanelBase.h  ProfilerPanel.h  ProjectSceneConfigPanels.h  SceneConfigPanels.h  SceneViewportPanel.cpp  SceneViewportPanel.h  StatisticsPanel.h
BC-Editor/Source/Selection/: SelectionContext.h
BC-Editor/Untitled Project/: Untitled Project.project
BC-Editor/Untitled Project/Scenes/: Untitled Scene - Copy.scene  Untitled Scene.scene
Tools/Linux/: build.sh  build_debug.sh  configure.sh  run.sh  run_debug.sh
Tools/Win/: build.bat  build_debug.bat  configure.bat  run.bat  run_debug.bat
